--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,32 @@ body {
     width: 35px;
 }
 
+/* Nav bar*/
+
+.navalert-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding-left: 0;
+    padding-right: 0;
+    z-index: 1;
+}
+
+.navbar {
+    margin-bottom: 0;
+    border: 0;
+    width: 100%;
+    background-color: rgba(53, 48, 54, .25);
+}
+
+.navbar .navbar-toggler {
+    border: 0;
+}
+
+.navbar-brand {
+    font-weight: bold
+}
+
 /* jumbotron */
 .jumbotron {
     background-color: transparent;
