--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
     height: 100vh;
 
         
-    background: url(../images/whiskey-bg.jpg) no-repeat bottom right fixed; 
+    background: url(../images/whiskey-bg.jpg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -56,6 +56,21 @@ body {
     width: 35px;
 }
 
+/* alert bar */
+
+.alert-container .col-12 {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.site-wide-alert {
+    border-radius: 0;
+    margin-bottom: 0;
+    padding: 5px 15px;
+    background-color: #decc22;
+    border-color: #decc22;
+}
+
 /* Nav bar*/
 
 .navalert-container {
@@ -82,6 +97,21 @@ body {
     font-weight: bold
 }
 
+.navbar .navbar-nav {
+    font-weight: bold
+}
+
+/* page headers */
+.page-header {
+    margin-bottom: 0;
+    border-bottom: 0;
+    text-align: center;
+}
+
+.page-header h2 {
+    margin-top: 0;
+}
+
 /* jumbotron */
 .jumbotron {
     background-color: transparent;
@@ -92,6 +122,7 @@ body {
     color: white;
     font-weight: bold;
     margin-bottom: 30px;
+    margin-top: 100px;
 }
 
 .jumbotron small {
