--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,28 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
-.alert-container {
+/* content containers */
+
+.content-container {
+    margin-top: 75px;
+    margin-bottom: 75px;
+}
+
+.quotes-container {
 
 }
+.features-container {
+
+}
+.container-wrapper {
+
+}
+
+.container-wrapper--red {
+   background-color: #f05f40; 
+   color: #fff;
+}
+
 
 .callout-container {
     height: 100vh;
@@ -34,22 +53,23 @@ body {
 }
 
 
-.quotes-container {
 
-}
 
-.features-container {
 
-}
 /* block divider */
 .block-divider {
     width: 75px;
     height: 5px;
     border: 0;
+    background-color: #444;
 }
 
 .block-divider--orange {
     background-color: #caa360;
+}
+
+.block-divider--white {
+    background-color: #fff;
 }
 
 .block-divider--short {
@@ -58,11 +78,6 @@ body {
 
 /* alert bar */
 
-.alert-container .col-12 {
-    padding-left: 0;
-    padding-right: 0;
-}
-
 .site-wide-alert {
     border-radius: 0;
     margin-bottom: 0;
@@ -70,6 +85,12 @@ body {
     background-color: #decc22;
     border-color: #decc22;
 }
+
+.alert-container .col-12 {
+    padding-left: 0;
+    padding-right: 0;
+}
+
 
 /* Nav bar*/
 
@@ -157,5 +178,23 @@ body {
     border-color: #ab503c;
 }
 
+.feature {
+    text-align: center;
+    margin-bottom: 40px;
+}
 
+.feature i {
+    margin-bottom: 20px;
+    font-size: 45px;
+    line-height: 45px;
+}
 
+.feature .btn {
+    background-color: white;
+    border-color: white;
+    border-radius: 15px;
+    min-width: 100px;
+    font-weight: bold;
+    margin-top: 10px;
+    color: #f05f40
+}
